add BaseDatos.sql, update openapi.yaml
